--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -6,10 +6,11 @@
     <div class="row justify-content-end">
       <div class="col-sm-9">
         <div class="row">
-
+          
+          <img src="../../static/images/nav-bg.png" alt="header-image">
           {% for user in users %}
-
-            <div class="col-lg-4 col-md-6 col-12">
+          
+          <div class="col-lg-4 col-md-6 col-12">
               <div class="card user-card">
                 <div class="card-inner">
                   <div class="image-wrapper">
@@ -34,9 +35,10 @@
                         </form>
                       {% endif %}
                     {% endif %}
-
+                        
                   </div>
-                  <p class="card-bio">BIO HERE</p>
+                  <p class="card-bio"><em>{{ user.location }}</em></p>
+                  <p class="card-bio">{{ user.bio}}</p>
                 </div>
               </div>
             </div>
